--- a/Shellhack/Shellhack/Storyboards/Newsfeed.storyboard
+++ b/Shellhack/Shellhack/Storyboards/Newsfeed.storyboard
@@ -83,7 +83,7 @@
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don Truong" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SND-g4-eLD">
                                                             <rect key="frame" x="0.0" y="0.0" width="75.5" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                            <color key="textColor" systemColor="systemRedColor"/>
+                                                            <color key="textColor" systemColor="systemBlueColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Aug 5th, 21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hb7-VL-dw6">
@@ -97,17 +97,8 @@
                                                         <constraint firstAttribute="height" constant="30" id="zce-El-xv2"/>
                                                     </constraints>
                                                 </stackView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How to cure covid-19? Is covid-19 vaccines kill people? I am superman. I'll save the world. Look at me" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVg-Pp-85Q">
-                                                    <rect key="frame" x="10" y="58" width="394" height="80"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="80" id="dH5-De-Mud"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                    <color key="textColor" systemColor="systemRedColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfx-Bb-tEK">
-                                                    <rect key="frame" x="10" y="143" width="394" height="157"/>
+                                                    <rect key="frame" x="10" y="170" width="394" height="130"/>
                                                     <string key="text">Fetch Technology Vietnam is a comprehensive global provider of HR and Talent Acquisition Services, focusing primarily in the technology fields. Founded in 2016, Fetch Technology Vietnam helps foreign companies of all types and sizes reach their potential by providing the talent and support to efficiently build and scale a high-performing, distributed workforce in Vietnam.
 
 Our mission is to offer Vietnam’s most talented technologists a platform to connect with some of the world’s leading tech companies and build their expertise on a global scale. Over 4 years, Fetch has built a good reputation and is trusted by many Vietnamese and foreign companies; And Fetch will continue its good work to bridge the divide between the World and the Vietnam Tech sector.</string>
@@ -115,30 +106,74 @@ Our mission is to offer Vietnam’s most talented technologists a platform to co
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lQU-jB-Mqv">
+                                                    <rect key="frame" x="349.5" y="17.5" width="44.5" height="31"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="hand.thumbsdown" catalog="system"/>
+                                                    <connections>
+                                                        <action selector="voteTapped:" destination="Nic-xN-bnI" eventType="touchUpInside" id="HyC-Aq-nX8"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rbc-me-61k">
+                                                    <rect key="frame" x="305" y="17.5" width="44.5" height="31"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="hand.thumbsup" catalog="system"/>
+                                                    <connections>
+                                                        <action selector="voteTapped:" destination="Nic-xN-bnI" eventType="touchUpInside" id="ksc-gI-05Z"/>
+                                                    </connections>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Warning: This post received multiple downvotes." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Wx-9k-drc">
+                                                    <rect key="frame" x="10" y="58" width="394" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="17" id="aLa-mR-xXi"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How to cure covid-19? Is covid-19 vaccines kill people? I am superman. I'll save the world. Look at me" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVg-Pp-85Q">
+                                                    <rect key="frame" x="10" y="85" width="394" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="dH5-De-Mud"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" systemColor="systemRedColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="cVg-Pp-85Q" firstAttribute="leading" secondItem="k0H-JF-oly" secondAttribute="leading" constant="10" id="3L9-w1-fe3"/>
                                                 <constraint firstItem="0UR-1U-KbK" firstAttribute="top" secondItem="Nwj-lC-TRR" secondAttribute="bottom" constant="10" id="3Ri-ua-rTp"/>
                                                 <constraint firstItem="qwJ-YY-BvR" firstAttribute="centerY" secondItem="0UR-1U-KbK" secondAttribute="centerY" id="6j8-xo-n9D"/>
-                                                <constraint firstItem="cVg-Pp-85Q" firstAttribute="top" secondItem="qwJ-YY-BvR" secondAttribute="bottom" constant="10" id="Eub-pj-w0X"/>
+                                                <constraint firstItem="6Wx-9k-drc" firstAttribute="leading" secondItem="k0H-JF-oly" secondAttribute="leading" constant="10" id="Aqb-3s-KuC"/>
+                                                <constraint firstItem="cVg-Pp-85Q" firstAttribute="top" secondItem="6Wx-9k-drc" secondAttribute="bottom" constant="10" id="Eub-pj-w0X"/>
+                                                <constraint firstItem="lQU-jB-Mqv" firstAttribute="centerY" secondItem="0UR-1U-KbK" secondAttribute="centerY" id="FPr-xa-h0T"/>
                                                 <constraint firstAttribute="bottom" secondItem="cfx-Bb-tEK" secondAttribute="bottom" id="GfS-Jy-xj3"/>
                                                 <constraint firstItem="qwJ-YY-BvR" firstAttribute="leading" secondItem="0UR-1U-KbK" secondAttribute="trailing" constant="10" id="Hdy-Xe-QhE"/>
                                                 <constraint firstItem="cfx-Bb-tEK" firstAttribute="top" secondItem="cVg-Pp-85Q" secondAttribute="bottom" constant="5" id="Pqp-1W-3aO"/>
+                                                <constraint firstItem="lQU-jB-Mqv" firstAttribute="leading" secondItem="Rbc-me-61k" secondAttribute="trailing" id="Rg1-Dj-G8q"/>
                                                 <constraint firstItem="0UR-1U-KbK" firstAttribute="leading" secondItem="k0H-JF-oly" secondAttribute="leading" constant="10" id="XSu-8f-T0v"/>
                                                 <constraint firstItem="Nwj-lC-TRR" firstAttribute="top" secondItem="k0H-JF-oly" secondAttribute="top" id="YWP-OU-6yW"/>
                                                 <constraint firstItem="Nwj-lC-TRR" firstAttribute="leading" secondItem="k0H-JF-oly" secondAttribute="leading" id="a3k-LS-hQa"/>
+                                                <constraint firstItem="Rbc-me-61k" firstAttribute="centerY" secondItem="0UR-1U-KbK" secondAttribute="centerY" id="bfO-qu-M8Z"/>
+                                                <constraint firstAttribute="trailing" secondItem="6Wx-9k-drc" secondAttribute="trailing" constant="10" id="dqf-Ig-qtz"/>
                                                 <constraint firstItem="cfx-Bb-tEK" firstAttribute="leading" secondItem="k0H-JF-oly" secondAttribute="leading" constant="10" id="e20-eY-9Ta"/>
                                                 <constraint firstAttribute="trailing" secondItem="Nwj-lC-TRR" secondAttribute="trailing" id="mEG-mg-pvD"/>
+                                                <constraint firstItem="6Wx-9k-drc" firstAttribute="top" secondItem="qwJ-YY-BvR" secondAttribute="bottom" constant="10" id="n5u-B5-Zwe"/>
                                                 <constraint firstAttribute="trailing" secondItem="cVg-Pp-85Q" secondAttribute="trailing" constant="10" id="sr6-sE-5i1"/>
                                                 <constraint firstAttribute="trailing" secondItem="cfx-Bb-tEK" secondAttribute="trailing" constant="10" id="uFs-Qk-hQ4"/>
+                                                <constraint firstAttribute="trailing" secondItem="lQU-jB-Mqv" secondAttribute="trailing" constant="20" id="uTD-1g-dfY"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="AvatarView" destination="0UR-1U-KbK" id="Hsk-vD-iau"/>
                                             <outlet property="ContentLabel" destination="cfx-Bb-tEK" id="f5B-ZE-FUG"/>
                                             <outlet property="DateLabel" destination="Hb7-VL-dw6" id="OT4-Ui-RGw"/>
+                                            <outlet property="DownVoteButton" destination="lQU-jB-Mqv" id="PvS-ep-Bd9"/>
                                             <outlet property="NameLabel" destination="SND-g4-eLD" id="Uwt-0j-a9v"/>
                                             <outlet property="TitleLabel" destination="cVg-Pp-85Q" id="pz9-bX-H36"/>
+                                            <outlet property="UpVoteButton" destination="Rbc-me-61k" id="exQ-80-kzP"/>
+                                            <outlet property="WarningLabel" destination="6Wx-9k-drc" id="w60-RQ-RmJ"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -197,9 +232,14 @@ Our mission is to offer Vietnam’s most talented technologists a platform to co
     </scenes>
     <resources>
         <image name="doc.richtext.fill" catalog="system" width="115" height="128"/>
+        <image name="hand.thumbsdown" catalog="system" width="128" height="128"/>
+        <image name="hand.thumbsup" catalog="system" width="128" height="128"/>
         <image name="undefined_avatar" width="920" height="897"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
