--- a/Shellhack/Shellhack/Storyboards/Newsfeed.storyboard
+++ b/Shellhack/Shellhack/Storyboards/Newsfeed.storyboard
@@ -97,8 +97,8 @@
                                                         <constraint firstAttribute="height" constant="30" id="zce-El-xv2"/>
                                                     </constraints>
                                                 </stackView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfx-Bb-tEK">
-                                                    <rect key="frame" x="10" y="170" width="394" height="130"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfx-Bb-tEK">
+                                                    <rect key="frame" x="10" y="151" width="394" height="149"/>
                                                     <string key="text">Fetch Technology Vietnam is a comprehensive global provider of HR and Talent Acquisition Services, focusing primarily in the technology fields. Founded in 2016, Fetch Technology Vietnam helps foreign companies of all types and sizes reach their potential by providing the talent and support to efficiently build and scale a high-performing, distributed workforce in Vietnam.
 
 Our mission is to offer Vietnam’s most talented technologists a platform to connect with some of the world’s leading tech companies and build their expertise on a global scale. Over 4 years, Fetch has built a good reputation and is trusted by many Vietnamese and foreign companies; And Fetch will continue its good work to bridge the divide between the World and the Vietnam Tech sector.</string>
@@ -132,9 +132,9 @@ Our mission is to offer Vietnam’s most talented technologists a platform to co
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How to cure covid-19? Is covid-19 vaccines kill people? I am superman. I'll save the world. Look at me" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVg-Pp-85Q">
-                                                    <rect key="frame" x="10" y="85" width="394" height="80"/>
+                                                    <rect key="frame" x="10" y="85" width="394" height="61"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="80" id="dH5-De-Mud"/>
+                                                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="80" id="dH5-De-Mud"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <color key="textColor" systemColor="systemRedColor"/>
